<resources>
    <string name="app_name">TabMe</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_data_info">DataInfo</string>
    <string name="title_activity_next">NextActivity</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="age">Age</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="mobile">Mobile</string>
    <string name="name">Name</string>
    <string name="go_read_activity">go read activity</string>
    <string name="submit">Submit</string>
    <string name="view">View</string>
    <string name="read_activity">read activity</string>
    <string name="login">Login</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="number_of_attempts_remaining">Number of Attempts Remaining</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="delete">Delete</string>
    <string name="title_activity_maps">Map</string>
    <string name="click_to_see_map">Click to see map</string>
    <string name="tab1_location_text">Tab1 location text</string>
    <string name="click_to_load_contact_list">Click to load contact List</string>
    <string name="click_to_see_call_log">Click to see call log</string>
    <string name="facebook_app_id">119699395375207</string>
    <string name="fb_login_protocol_scheme">fb119699395375207</string>

</resources>
